# fpic_repro

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  server.go  target_runner.proto
